# decision-kernel

./: .gitignore  ADVANCED_LEARNING_SUMMARY.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GOVERNANCE.md  IMPLEMENTATION_v0.2.md  IMPLEMENTATION_v0.3.md  IMPLEMENTATION_v0.4.md  IMPLEMENTATION_v0.5.md  IMPLEMENTATION_v0.6.md  IMPLEMENTATION_v0.7.md  IMPLEMENTATION_v0.8.md  IMPLEMENTATION_v0.9.md  INTELLIGENT_PLANNER_SUMMARY.md  LLM_INTEGRATION.md  LLM_STATUS.md  MAINTAINERS.md  Makefile  POWERFUL_INTENTS_SUMMARY.md  PR_SUMMARY_v0.2.md  PR_SUMMARY_v0.3.md  PUSH_CHECKLIST.md  README.md  RELEASE_v0.7.md  RELEASE_v1.0.0.md  REVOLUTIONARY_FEATURES.md  SECURITY.md  TESTING_GUIDE.md  TEST_RESULTS.md  UPGRADE_SUMMARY.md  V1_CANDIDATE_SUMMARY.md  VERIFICATION_v0.6.md  WHY_USE_LLM.md  chat_with_robot.py  collect_robot_data.py  compare_parsers.py  demo_intensive_training.py  demo_powerful_intents.py  demo_training_pipeline.py  (+9 more)
adapters/: __init__.py  base.py
brain/: __init__.py  kernel.py
cli/: __init__.py  run.py
decision-kernel-ecosystem-kit/: PUBLISHING.md  README.md
decision-kernel-pybullet/: README.md  demo.py  pyproject.toml
decision-kernel-pybullet/decision_kernel_pybullet/: __init__.py  adapter.py
decision-kernel-ros2/: README.md  pyproject.toml
decision-kernel-ros2/decision_kernel_ros2/: __init__.py  adapter.py
decision-kernel-webots/: README.md  demo.py  pyproject.toml
decision-kernel-webots/decision_kernel_webots/: __init__.py  adapter.py
decision_kernel_conformance/: __init__.py  __main__.py  runner.py
demos/: __init__.py  advanced_learning_demo.py  creative_thinking_demo.py  functional_capabilities_demo.py  intelligent_planner_demo.py  llm_intent_demo.py  ml_models_demo.py  pathfinding_demo.py  resilience_demo.py
docs/: action_spec.md  adapter_contract.md  adopters.md  adoption.md  architecture.md  compatibility.md  compatibility_matrix.md  conformance.md  intelligent_planner.md  ml_training_guide.md  reference_implementations.md  roadmap.md  skill_spec.md  v1_candidate.md  (+4 more)
(+200 files in other folders)
